--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       position: relative;
       overflow: hidden;
       background-color: #222;
+      touch-action: none;
     }
     #player {
       width: 30px;
@@ -26,6 +27,7 @@
       position: absolute;
       bottom: 10px;
       left: 180px;
+      transition: left 0.1s linear;
     }
     .obstacle {
       width: 30px;
@@ -58,6 +60,15 @@
   let obstacles = [];
   let gameRunning = true;
 
+  let playerColors = ["lime", "cyan", "yellow", "magenta", "orange"];
+  let backgroundColors = ["#222", "#333", "#444", "#555", "#666"];
+
+  function updateAppearance() {
+    const index = Math.floor(level / 10) % playerColors.length;
+    player.style.backgroundColor = playerColors[index];
+    game.style.backgroundColor = backgroundColors[index];
+  }
+
   player.style.left = "180px";
 
   document.addEventListener("keydown", (e) => {
@@ -70,6 +81,40 @@
     }
   });
 
+  let touchStartX = 0;
+  let touchEndX = 0;
+  let playerMoving = false;
+  const longSwipeThreshold = 60;
+
+  game.addEventListener('touchstart', (e) => {
+    touchStartX = e.changedTouches[0].clientX;
+  }, { passive: true });
+
+  game.addEventListener('touchend', (e) => {
+    touchEndX = e.changedTouches[0].clientX;
+    handleSwipe();
+  }, { passive: true });
+
+  function handleSwipe() {
+    if (!gameRunning || playerMoving) return;
+    const deltaX = touchEndX - touchStartX;
+    const absDeltaX = Math.abs(deltaX);
+    const currentLeft = parseInt(player.style.left);
+
+    if (absDeltaX > 20) {
+      let moveAmount = 20;
+      if (absDeltaX > longSwipeThreshold) {
+        moveAmount = 80;
+        playerMoving = true;
+        setTimeout(() => playerMoving = false, 150);
+      }
+      let newLeft = currentLeft + (deltaX > 0 ? moveAmount : -moveAmount);
+      if (newLeft < 0) newLeft = 0;
+      if (newLeft > 370) newLeft = 370;
+      player.style.left = newLeft + "px";
+    }
+  }
+
   function createObstacle() {
     const obs = document.createElement("div");
     obs.className = "obstacle";
@@ -80,51 +125,48 @@
   }
 
   function updateObstacles() {
-    obstacles.forEach((obs, index) => {
+    for (let i = obstacles.length - 1; i >= 0; i--) {
+      const obs = obstacles[i];
       const top = parseInt(obs.style.top);
       obs.style.top = top + speed + "px";
 
       const obsLeft = parseInt(obs.style.left);
       const playerLeft = parseInt(player.style.left);
 
-      if (
-        top >= 250 &&
-        top <= 290 &&
-        Math.abs(obsLeft - playerLeft) < 30
-      ) {
+      if (top >= 250 && top <= 290 && Math.abs(obsLeft - playerLeft) < 30) {
         gameRunning = false;
-        statusText.textContent = `💀 خسرت في المستوى ${level}... اضغط أي زر للمتابعة`;
-        document.addEventListener("keydown", resumeGame, { once: true });
+        statusText.textContent = `💀 خسرت في المستوى ${level}... اضغط لإعادة اللعب`;
+        document.addEventListener("keydown", restartGame, { once: true });
+        game.addEventListener("touchstart", restartGame, { once: true });
       }
 
       if (top > 300) {
         game.removeChild(obs);
-        obstacles.splice(index, 1);
+        obstacles.splice(i, 1);
         if (gameRunning) {
           level++;
           speed += 0.3;
           statusText.textContent = `المستوى: ${level}`;
+          if (level % 10 === 0) updateAppearance();
         }
       }
-    });
+    }
   }
 
-  function resumeGame() {
+  function restartGame() {
     gameRunning = true;
     statusText.textContent = `المستوى: ${level}`;
+    obstacles.forEach(o => o.remove());
+    obstacles = [];
   }
 
   function gameLoop() {
-    if (gameRunning) {
-      updateObstacles();
-    }
+    if (gameRunning) updateObstacles();
     requestAnimationFrame(gameLoop);
   }
 
   setInterval(() => {
-    if (gameRunning) {
-      createObstacle();
-    }
+    if (gameRunning) createObstacle();
   }, 1500);
 
   gameLoop();
